--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
   },
   "minimum-stability": "dev",
   "require": {
-    "php": "^>=7.0",
+    "php": ">=7.0",
     "jefferyjob/dartswoole": "dev-master"
   }
 }
